--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,15 @@
 .App-header input {
   font-size: 1em;
   max-width: 90vw;
+  -webkit-appearance: none;
+  background: #282c34;
+  border: none;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
+
+.App-header input:focus {
+  outline: none;
 }
 
 main {
