added link functionality

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,13 @@ main p {
   line-height: 1.6em;
 }
 
+main p a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
+
 .icon {
   vertical-align: top;
   margin: auto 0.3em;
