--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,30 @@ main p {
   height: 1.6em;
 }
 
+.inline {
+  display:inline;
+}
+
+.arrow-up {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;  
+  border-bottom: 5px solid black;
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+}
+
+.arrow-down {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;  
+  border-top: 5px solid black;
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
