--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
 
 .App-link {
@@ -40,6 +43,7 @@ main {
   margin: 0 auto;
   font-size: 1.5em;
   padding: 5px;
+  padding-top: 25vh;
 }
 
 main p {
