--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
   position: fixed;
   width: 100%;
   z-index: 10;
+  position: sticky;
+  top: 0;
 }
 
 .App-link {
@@ -43,19 +45,6 @@ main {
   margin: 0 auto;
   font-size: 1.5em;
   padding: 5px;
-  padding-top: 15vh;
-}
-
-@media (max-width: 700px) {
-  main {
-    padding-top: 20vh;
-  }
-}
-
-@media (max-width: 400px) {
-  main {
-    padding-top: 25vh;
-  }
 }
 
 main p {
@@ -77,6 +66,7 @@ main p a {
 }
 
 .inline {
+  cursor: pointer;
   display:inline;
 }
 
